# sparrow

./: CMakeLists.txt  LICENSE
include/sparrow/: game.hpp  hand.h  hand.hpp  rule.hpp  sparrow.h  tile.h  tile.hpp  tileset.h  util.h
include/sparrow/riichi/: rule.hpp  tileset.hpp
script/: build.sh  generate.sh  test.sh
src/: hand.cpp  main.cpp  sparrow.cpp  tile.cpp
test/: game_test.cpp  hand_test.cpp  strong_typedef_test.cpp  test.cpp  test_game.hpp  test_rule.hpp  test_tileset.h  test_tileset.hpp  tile_test.cpp
